# sof

src/audio/: mux.c
src/audio/mux/: mux.c  mux_generic.c
src/include/sof/audio/: mux.h
src/include/uapi/ipc/: topology.h
test/cmocka/src/audio/mux/: CMakeLists.txt  mock.c  mock.h  mux_copy.c  mux_generic.c  mux_new.c  mux_set_values.c  mux_tests.c
